--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,31 @@
   "applications": {
     "gecko": {
       "id": "logout@heilbit.de",
-      "strict_min_version": "68.0"
+      "strict_min_version": "78.0"
     }
   },
   "name": "Logout",
   "description": "This extension adds Logout to the folders context menu.",
-  "version": "2.0",
-  "legacy": {
-	"type": "xul",
-    "options": {
-      "page": "chrome://logout/content/contextmenu.xul",
-      "open_in_tab": true
+  "version": "2.1",
+  "permissions": ["menus","accountsFolders","accountsRead"],
+  "background": {
+    "scripts": ["logout.js"]
+  },
+  "experiment_apis": {
+    "exp_logout": {
+      "schema": "experiment_schema.json",
+      "parent": {
+        "scopes": [
+          "addon_parent"
+        ],
+        "paths": [
+          [
+            "exp_logout"
+          ]
+        ],
+        "script": "experiment.js"
+      }
     }
   }
+  
 }
