--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
   "applications": {
     "gecko": {
       "id": "logout@heilbit.de",
-      "strict_min_version": "78.0"
+      "strict_min_version": "78.0",
+      "strict_max_version": "78.*"
     }
   },
   "name": "Logout",
